--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "downloadram.club",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Joke website made simply for FUN!",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Glen Hughes <glen@glenhughes.me>",
   "dependencies": {
     "gatsby": "^2.3.34",
     "gatsby-image": "^2.0.41",
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.18",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
