--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-transformer-sharp": "^2.1.18",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-animated-css": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-loading": "^2.0.3",
