--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.6",
     "react-animated-css": "^1.2.0",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.1",
     "react-loading": "^2.0.3",
     "react-progressbar": "^15.4.1"
